--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ nav ul li a:hover {
 
 .skills-title {
   margin-bottom: 1em;
-  font-size: 1.8em;
+  font-size: 20px;
 }
 
 #skills-text[contenteditable="true"] {
