--- a/style.css
+++ b/style.css
@@ -105,6 +105,12 @@ nav ul li a:focus {
   color: var(--primary-color);
 }
 
+nav ul li a.active {
+  color: var(--primary-color);
+  font-weight: 700;
+  border-bottom: 2px solid var(--primary-color);
+}
+    
 .homecontainer,
 .aboutcontainer,
 .skillscontainer,
